fixed alignment issues on CartPage

--- a/src/app/component/CartItem/CartItem.style.scss
+++ b/src/app/component/CartItem/CartItem.style.scss
@@ -140,10 +140,12 @@
         }
 
         &_isLikeTable {
+            top: 0;
+
             @include after-mobile {
                 width: 20rem;
                 position: absolute;
-                top: 0;
+                top: 20px;
                 bottom: 0;
                 margin: auto;
                 right: 0;
@@ -191,8 +193,12 @@
                 width: 20%;
                 bottom: 0;
                 right: 20%;
-                top: 0;
+                top: -5px;
                 margin: auto;
+                justify-content: center;
+            }
+            > * {
+                margin: 0 5px;
             }
         }
 
